kubernetes/apps/flux-system/add-ons/webhooks/github/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-receiver
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`flux-receiver.${SECRET_DOMAIN}`) && PathPrefix(`/hook`)
      middlewares:
        - name: crowdsec-traefik-bouncer
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: &host "flux-receiver.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      # secretName: "${SECRET_DOMAIN/./-}-tls"
